windows scrollbar fix

--- a/src/app/component/common/dropdown-menu/dropdown-menu.component.scss
+++ b/src/app/component/common/dropdown-menu/dropdown-menu.component.scss
@@ -198,7 +198,7 @@
     width: 330px;
     max-width: 330px;
 
-    max-height: 830px;
+    max-height: 831px;
 
     overflow-y: auto;
     position: relative;
